--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "API rest para deep fashion",
   "main": "index.js",
+  "type":"module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node --watch ./index.js"
   },
   "keywords": [
     "express",
@@ -14,5 +15,8 @@
     "javascript"
   ],
   "author": "Nicolas David Campos Segura <nicolascampos1621@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
