--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Nicolas David Campos Segura <nicolascampos1621@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "mongoose": "^8.15.0"
   }
